Panopoly Widgets 7.x-1.90, 2022-07-22
-------------------
- Multiple contrib updates to Panopoly.

Panopoly Widgets 7.x-1.89, 2022-07-20
-------------------
- No changes since last release.

Panopoly Widgets 7.x-1.88, 2022-05-04
-------------------
- No changes since last release.

Panopoly Widgets 7.x-1.87, 2022-02-17
-------------------
- No changes since last release.

Panopoly Widgets 7.x-1.86, 2022-01-26
-------------------
- No changes since last release.

Panopoly Widgets 7.x-1.85, 2022-01-20
-------------------
- Notice: Undefined index: original_title in
  _panopoly_widgets_content_item_form_submit() (line 871 of
  panopoly_widgets.module).

Panopoly Widgets 7.x-1.84, 2022-01-05
-------------------
- No changes since last release.

Panopoly Widgets 7.x-1.83, 2021-07-21
-------------------
- No changes since last release.

Panopoly Widgets 7.x-1.82, 2021-07-21
-------------------
- No changes since last release.

Panopoly Widgets 7.x-1.81, 2021-06-10
-------------------
- Update Simple GMap.
- "Content item" widget gives validation error if attempting to use a piece
  of content with a title longer than 128 characters.
- Multiple Spotlight widgets on the same page leads to duplicate IDs.
- Update Media, YouTube, File Entity.

Panopoly Widgets 7.x-1.80, 2021-04-26
-------------------
- No changes since last release.

Panopoly Widgets 7.x-1.79, 2021-01-20
-------------------
- Patch media_youtube to fix failing embeds.

Panopoly Widgets 7.x-1.78, 2020-11-30
-------------------
- No changes since last release.

Panopoly Widgets 7.x-1.77, 2020-11-19
-------------------
- No changes since last release.

Panopoly Widgets 7.x-1.76, 2020-09-17
-------------------
- No changes since last release.

Panopoly Widgets 7.x-1.75, 2020-06-18
-------------------
- No changes since last release.

Panopoly Widgets 7.x-1.74, 2020-05-20
-------------------
- File widget doesn't seem to switch to Media browser in update tests.