@@ -125,8 +125,8 @@ features[linkit_profiles][] = content_fields
 features[views_view][] = panopoly_widgets_general_content
 features_exclude[dependencies][linkit] = linkit
 
-; Information added by Drupal.org packaging script on 2022-07-22
-version = "7.x-1.90"
+; Information added by Drupal.org packaging script on 2023-04-05
+version = "7.x-1.91"
 core = "7.x"
 project = "panopoly_widgets"
-datestamp = "1658509762"
+datestamp = "1680731458"
